# capicxx-wamp-tools

./: .travis.yml  AUTHORS  CHANGES  README.md  index.html
org.genivi.commonapi.wamp/: .gitignore  .project  pom.xml
org.genivi.commonapi.wamp.cli/: .gitignore  .project  plugin.xml  pom.xml
org.genivi.commonapi.wamp.cli.feature/: .project  feature.xml  pom.xml
org.genivi.commonapi.wamp.cli.product/: .project  commonapi_wamp_cli.product  pom.xml
org.genivi.commonapi.wamp.examples/: .cproject  .project  CMakeLists.txt  README.md
org.genivi.commonapi.wamp.examples/models/testcases/example10/: ExampleInterface.fidl
org.genivi.commonapi.wamp.examples/models/testcases/example12/: ExampleInterface.fidl
org.genivi.commonapi.wamp.examples/models/testcases/example30/: ExampleInterface.fidl
org.genivi.commonapi.wamp.examples/models/testcases/example32/: ExampleInterface.fidl
org.genivi.commonapi.wamp.examples/src/: Example77Service.cpp
org.genivi.commonapi.wamp.examples/src-gen/: .gitignore
org.genivi.commonapi.wamp.examples/src/example10/client/: index.html
org.genivi.commonapi.wamp.examples/src/example10/server/: ExampleInterfaceStubImpl.cpp  ExampleInterfaceStubImpl.hpp
org.genivi.commonapi.wamp.examples/src/example12/client/: index.html
org.genivi.commonapi.wamp.examples/src/example12/server/: ExampleInterfaceStubImpl.cpp  ExampleInterfaceStubImpl.hpp
org.genivi.commonapi.wamp.examples/src/example30/client/: index.html
org.genivi.commonapi.wamp.examples/src/example30/server/: Example30Service.cpp
org.genivi.commonapi.wamp.examples/src/example32/client/: index.html
org.genivi.commonapi.wamp.examples/src/example32/server/: Example32Service.cpp
org.genivi.commonapi.wamp.examples/src/example77/client/: index.html
org.genivi.commonapi.wamp.examples/src/example77/server/: Example77Service.cpp  ExampleInterfaceStubImpl.cpp  ExampleInterfaceStubImpl.hpp
org.genivi.commonapi.wamp.examples/workdir/: commonapi.ini  run.sh  runRESTClient.sh
org.genivi.commonapi.wamp.examples/workdir/example10/: .gitignore  runRESTClient.sh  runServer.sh
org.genivi.commonapi.wamp.examples/workdir/example12/: runRESTClient.sh  runServer.sh
org.genivi.commonapi.wamp.examples/workdir/example30/: commonapi.ini  runRESTClient.sh  runServer.sh
org.genivi.commonapi.wamp.examples/workdir/example32/: commonapi.ini  runRESTClient.sh  runServer.sh
org.genivi.commonapi.wamp.examples/workdir/example77/: runServer.sh
org.genivi.commonapi.wamp.feature/: .project  category.xml  feature.properties  feature.xml  pom.xml
org.genivi.commonapi.wamp.releng/: .project  pom.xml
org.genivi.commonapi.wamp.target/: .project  commonapi_wamp-luna.target  commonapi_wamp-oxygen.target  pom.xml
org.genivi.commonapi.wamp.tests/: .gitignore  .project  CMakeLists.txt  README.md  build.properties  pom.xml
org.genivi.commonapi.wamp.tests/mochajs/example77/: package.json  test.js
org.genivi.commonapi.wamp.tests/mochatest/: TestAssertions.js  UnixCommands.js  reporter.js
org.genivi.commonapi.wamp.tests/mochatest/.crossbar/: config.json
org.genivi.commonapi.wamp.tests/mochatest/example10/: Example10Test.js  commonapi.ini
org.genivi.commonapi.wamp.tests/mochatest/example10/server/: Example10Service.cpp
org.genivi.commonapi.wamp.tests/mochatest/example11/: Example11Test.js  commonapi.ini
org.genivi.commonapi.wamp.tests/mochatest/example11/server/: Example11Service.cpp  ExampleInterfaceStubImpl.cpp  ExampleInterfaceStubImpl.hpp
org.genivi.commonapi.wamp.tests/mochatest/example12/: Example12Test.js  commonapi.ini
org.genivi.commonapi.wamp.tests/mochatest/example12/server/: Example12Service.cpp  ExampleInterfaceStubImpl.cpp  ExampleInterfaceStubImpl.hpp
org.genivi.commonapi.wamp.tests/mochatest/example30/: Example30Test.js
org.genivi.commonapi.wamp.tests/mochatest/example30/server/: Example30Service.cpp  ExampleInterfaceStubImpl.cpp  ExampleInterfaceStubImpl.hpp
org.genivi.commonapi.wamp.tests/mochatest/example32/: Example32Test.js
org.genivi.commonapi.wamp.tests/mochatest/example32/server/: Example32Service.cpp  ExampleInterfaceStubImpl.cpp  ExampleInterfaceStubImpl.hpp
org.genivi.commonapi.wamp.tests/mochatest/example36/: Example36Test.js  commonapi.ini
org.genivi.commonapi.wamp.tests/mochatest/example36/server/: Example36Service.cpp  ExampleInterfaceStubImpl.cpp  ExampleInterfaceStubImpl.hpp
org.genivi.commonapi.wamp.tests/mochatest/example77/: Example77Test.js  commonapi.ini
org.genivi.commonapi.wamp.tests/mochatest/example77/server/: Example77Service.cpp
org.genivi.commonapi.wamp.tests/models/testcases/example10/: ExampleInterface.fidl
org.genivi.commonapi.wamp.tests/models/testcases/example11/: ExampleInterface.fidl
org.genivi.commonapi.wamp.tests/models/testcases/example12/: ExampleInterface.fidl
org.genivi.commonapi.wamp.tests/models/testcases/example30/: ExampleInterface.fidl
org.genivi.commonapi.wamp.tests/models/testcases/example32/: ExampleInterface.fidl
org.genivi.commonapi.wamp.tests/models/testcases/example36/: ExampleInterface.fidl
org.genivi.commonapi.wamp.tests/models/testcases/example77/: ExampleInterface.fidl
org.genivi.commonapi.wamp.tests/src/refcode/testcases/example77/: ExampleInterfaceWampDeployment.cpp  ExampleInterfaceWampDeployment.hpp  ExampleInterfaceWampProxy.cpp  ExampleInterfaceWampProxy.hpp  ExampleInterfaceWampStructsSupport.cpp  ExampleInterfaceWampStructsSupport.hpp  ExampleInterfaceWampStubAdapter.cpp  ExampleInterfaceWampStubAdapter.hpp
org.genivi.commonapi.wamp.tests/src/refcode/v0/testcases/example10/: ExampleInterfaceWampDeployment.cpp  ExampleInterfaceWampDeployment.hpp  ExampleInterfaceWampStructsSupport.cpp  (+4 more)
org.genivi.commonapi.wamp.ui/: .project  plugin.xml  pom.xml
org.genivi.commonapi.wamp.updatesite/: .project  category.xml  deploy_site.sh  pom.xml
org.genivi.commonapi.wamp.updatesite/scripts/: create_file_index.sh  deploy_site.sh
org.genivi.commonapi.wamp.updatesite/siteTemplate/: index.html
org.genivi.commonapi.wamp/deployment/: CommonAPI-Wamp_deployment_spec.fdepl
standalone/: index.html
(+96 files in other folders)
